# osx-cpu-temp-sdl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
